--- a/src/main/webapp/app/entities/core/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/core/post/post-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{post.clientId}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.corePost.content">Content</span></dt>
+                <dd>
+                    <span>{{post.content}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
