Added quill editor

--- a/src/main/webapp/app/entities/core/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/core/post/post-detail.component.html
@@ -15,7 +15,8 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.corePost.content">Content</span></dt>
                 <dd>
-                    <span>{{post.content}}</span>
+                    <!--<span>{{post.content}}</span>-->
+                    <span [innerHtml]="post.content"></span>
                 </dd>
             </dl>
 
