--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -32,8 +32,8 @@
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="title"><span jhiTranslate="gatewayApp.corePost.title">Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.corePost.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="content"><span jhiTranslate="gatewayApp.corePost.content">Content</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th></th>
+            <!--<th jhiSortBy="content"><span jhiTranslate="gatewayApp.corePost.content">Content</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+-->            <th></th>
             </tr>
             </thead>
             <tbody>
@@ -41,7 +41,7 @@
                 <td><a [routerLink]="['/post', post.id, 'view' ]">{{post.id}}</a></td>
                 <td>{{post.title}}</td>
                 <td>{{post.clientId}}</td>
-                <td>{{post.content}}</td>
+               <!-- <td>{{post.content}}</td>-->
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
