Added Entities: Format. Modified Entities: Post, Tag, Status, Organization, Post

--- a/src/main/webapp/app/entities/core/category/category-detail.component.html
+++ b/src/main/webapp/app/entities/core/category/category-detail.component.html
@@ -21,9 +21,9 @@
                 <dd>
                     <span>{{category.parent}}</span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreCategory.meta">Meta</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreCategory.clientId">Client Id</span></dt>
                 <dd>
-                    <span>{{category.meta}}</span>
+                    <span>{{category.clientId}}</span>
                 </dd>
             </dl>
 
