--- a/src/main/webapp/app/entities/core/category/category.component.html
+++ b/src/main/webapp/app/entities/core/category/category.component.html
@@ -34,7 +34,7 @@
             <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreCategory.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreCategory.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="parent"><span jhiTranslate="gatewayApp.coreCategory.parent">Parent</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="meta"><span jhiTranslate="gatewayApp.coreCategory.meta">Meta</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreCategory.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -45,7 +45,7 @@
                 <td>{{category.description}}</td>
                 <td>{{category.slug}}</td>
                 <td>{{category.parent}}</td>
-                <td>{{category.meta}}</td>
+                <td>{{category.clientId}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
