--- a/src/main/webapp/app/entities/core/status/status-update.component.html
+++ b/src/main/webapp/app/entities/core/status/status-update.component.html
@@ -31,6 +31,11 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.isDefault" for="field_isDefault">Is Default</label>
+                    <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
+                        [(ngModel)]="status.isDefault" />
+                </div>
 
             </div>
             <div>
