--- a/src/main/webapp/app/entities/core/status/status.component.html
+++ b/src/main/webapp/app/entities/core/status/status.component.html
@@ -32,6 +32,7 @@
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreStatus.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreStatus.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="isDefault"><span jhiTranslate="gatewayApp.coreStatus.isDefault">Is Default</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -40,6 +41,7 @@
                 <td><a [routerLink]="['/status', status.id, 'view' ]">{{status.id}}</a></td>
                 <td>{{status.name}}</td>
                 <td>{{status.clientId}}</td>
+                <td>{{status.isDefault}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
