--- a/src/main/webapp/app/entities/core/tag/tag.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag.component.html
@@ -33,7 +33,7 @@
             <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreTag.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreTag.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="meta"><span jhiTranslate="gatewayApp.coreTag.meta">Meta</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreTag.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -43,7 +43,7 @@
                 <td>{{tag.name}}</td>
                 <td>{{tag.slug}}</td>
                 <td>{{tag.description}}</td>
-                <td>{{tag.meta}}</td>
+                <td>{{tag.clientId}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
