--- a/src/main/webapp/app/entities/core/category/category-update.component.html
+++ b/src/main/webapp/app/entities/core/category/category-update.component.html
@@ -42,9 +42,15 @@
                         [(ngModel)]="category.parent" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.meta" for="field_meta">Meta</label>
-                    <input type="text" class="form-control" name="meta" id="field_meta"
-                        [(ngModel)]="category.meta" />
+                    <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.clientId" for="field_clientId">Client Id</label>
+                    <input type="text" class="form-control" name="clientId" id="field_clientId"
+                        [(ngModel)]="category.clientId" required/>
+                    <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                        </small>
+                    </div>
                 </div>
 
             </div>
