--- a/src/main/webapp/app/entities/core/status/status-detail.component.html
+++ b/src/main/webapp/app/entities/core/status/status-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{status.clientId}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreStatus.isDefault">Is Default</span></dt>
+                <dd>
+                    <span>{{status.isDefault}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
