--- a/src/main/webapp/app/entities/core/tag/tag-detail.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag-detail.component.html
@@ -17,9 +17,9 @@
                 <dd>
                     <span>{{tag.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreTag.meta">Meta</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreTag.clientId">Client Id</span></dt>
                 <dd>
-                    <span>{{tag.meta}}</span>
+                    <span>{{tag.clientId}}</span>
                 </dd>
             </dl>
 
