--- a/src/main/webapp/app/entities/core/role/role-detail.component.html
+++ b/src/main/webapp/app/entities/core/role/role-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{role.clientId}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreRole.isDefault">Is Default</span></dt>
+                <dd>
+                    <span>{{role.isDefault}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
