--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -134,7 +134,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.slug" for="field_slug">Slug</label>
                     <input type="text" class="form-control" name="slug" id="field_slug"
-                        [(ngModel)]="post.slug" disabled/>
+                        [(ngModel)]="post.slug" disabled required/>
                     <div [hidden]="!(editForm.controls.slug?.dirty && editForm.controls.slug?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.slug?.errors?.required" jhiTranslate="entity.validation.required">
