Modified entities: Role, Format, Claimant, Rating, Status, Claim

--- a/src/main/webapp/app/entities/core/format/format-detail.component.html
+++ b/src/main/webapp/app/entities/core/format/format-detail.component.html
@@ -21,6 +21,10 @@
                 <dd>
                     <span>{{format.description}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreFormat.slug">Slug</span></dt>
+                <dd>
+                    <span>{{format.slug}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
