--- a/src/main/webapp/app/entities/core/organization/organization-update.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-update.component.html
@@ -236,7 +236,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreOrganization.email" for="field_email">Email</label>
                     <input type="text" class="form-control" name="email" id="field_email"
-                        [(ngModel)]="organization.email" required pattern="'^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,30}$'"/>
+                        [(ngModel)]="organization.email" required pattern="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,30}$"/>
                     <div [hidden]="!(editForm.controls.email?.dirty && editForm.controls.email?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.email?.errors?.required" jhiTranslate="entity.validation.required">
