--- a/src/main/webapp/app/entities/core/format/format-update.component.html
+++ b/src/main/webapp/app/entities/core/format/format-update.component.html
@@ -35,6 +35,17 @@
                     <input type="text" class="form-control" name="description" id="field_description"
                         [(ngModel)]="format.description" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.slug" for="field_slug">Slug</label>
+                    <input type="text" class="form-control" name="slug" id="field_slug"
+                        [(ngModel)]="format.slug" required/>
+                    <div [hidden]="!(editForm.controls.slug?.dirty && editForm.controls.slug?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.slug?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                        </small>
+                    </div>
+                </div>
 
             </div>
             <div>
