--- a/src/main/webapp/app/entities/core/status/status-detail.component.html
+++ b/src/main/webapp/app/entities/core/status/status-detail.component.html
@@ -17,6 +17,10 @@
                 <dd>
                     <span>{{status.isDefault}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreStatus.slug">Slug</span></dt>
+                <dd>
+                    <span>{{status.slug}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
