--- a/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
@@ -35,6 +35,7 @@
             <th jhiSortBy="description"><span jhiTranslate="gatewayApp.factcheckClaimant.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="imageURL"><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Image URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.factcheckClaimant.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.factcheckClaimant.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -46,6 +47,7 @@
                 <td>{{claimant.description}}</td>
                 <td>{{claimant.imageURL}}</td>
                 <td>{{claimant.clientId}}</td>
+                <td>{{claimant.slug}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
